--- a/bootstrap_assignment_3.html
+++ b/bootstrap_assignment_3.html
@@ -34,8 +34,8 @@
                 class="img-fluid mb-3"
                 alt="Profile picture"
               />
-              <h2>About Me</h2>
-              <p>
+              <h2 class="fs-3 fw-bold">About Me</h2>
+              <p class="fs-6">
                 A CS major student currently in the 2nd year 2nd semester. Likes
                 reading web novels and have an unhealthy love for JS and CSS.
               </p>
@@ -43,16 +43,16 @@
           </section>
           <section class="col-12 col-lg-6">
             <div class="border rounded p-3 h-100 bg-white">
-              <h2>Achievements</h2>
+              <h2 class="fs-3 fw-bold">Achievements</h2>
               <ul>
-                <li>Usually read around 200 chapters per day of novels.</li>
-                <li>
+                <li class="fs-6">Usually read around 200 chapters per day of novels.</li>
+                <li class="fs-6">
                   Remembers weird things but not the ones that matter (I'm proud of it 😉).
                 </li>
-                <li>
+                <li class="fs-6">
                   Managed to get an A after getting almost 50% on midterm for DSA class.
                 </li>
-                <li>Can eat a lot... 🐷</li>
+                <li class="fs-6">Can eat a lot... 🐷</li>
               </ul>
             </div>
           </section>
