--- a/bootstrap_assignment_2.html
+++ b/bootstrap_assignment_2.html
@@ -16,13 +16,10 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      h2 {
-        margin-bottom: 20px;
-      }
     </style>
   </head>
   <body>
-    <h2>Table with 2 Column Layout</h2>
+    <h2>Bootstrap exercise 2</h2>
 
     <div class="container-fluid">
       <div class="row">
